--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,7 @@ Authors@R:
     person("Benjamin", "Becker", , "b.becker@iqb.hu-berlin.de", role = c("aut", "cre"))
 Description: Provides a framework for unit testing and diff creation of data sets. 
 Depends: R (>= 4.0.0)
-Imports: eatGADS, yaml, writexl, readxl
+Imports: eatGADS, yaml, writexl, readxl, eatFDZ
 URL: https://github.com/beckerbenj/eatDaT,
     https://beckerbenj.github.io/eatDaT/
 License: GPL (>= 2)
@@ -15,3 +15,4 @@ RoxygenNote: 7.3.2
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
+Remotes: beckerbenj/eatFDZ
