--- a/tests/testthat/helper_example_repo/data/helper_data1.yaml
+++ b/tests/testthat/helper_example_repo/data/helper_data1.yaml
@@ -1,3 +1,3 @@
 version: v2.3
-release: helper_example_repo/data_files/example_data.sav
-oldrel: helper_example_repo/data_files/example_data2.sav
+release: data_files/example_data.sav
+oldrel: data_files/example_data2.sav
