--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,7 @@ Authors@R:
     person("Benjamin", "Becker", , "b.becker@iqb.hu-berlin.de", role = c("aut", "cre"))
 Description: Provides a framework for unit testing and diff creation of data sets. 
 Depends: R (>= 4.4.0)
-Imports: eatGADS, yaml, writexl, readxl, eatFDZ, pkgload
+Imports: eatGADS, yaml, writexl, eatFDZ, pkgload, clipr, cli, whisker
 URL: https://github.com/beckerbenj/eatDataTest,
     https://beckerbenj.github.io/eatDataTest/
 License: GPL (>= 2)
@@ -13,6 +13,6 @@ Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
 Suggests: 
-    testthat (>= 3.0.0)
+    testthat (>= 3.0.0), readxl
 Config/testthat/edition: 3
 Remotes: beckerbenj/eatFDZ
