run_revdep_tests: Fix bug caused by any invalid path
#9 | Adds additional argument to read_data_yaml, which makes converting paths optional. The respective get-functions use reasonable defaults, but do not have the flexibility yet to change these defaults. get-functions are also exported to the user-level.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,10 @@
 export(add_data)
 export(create_data_yaml)
 export(create_diff)
+export(get_depends)
+export(get_oldrel_path)
+export(get_release_path)
+export(get_version)
 export(import_data)
 export(read_data_yaml)
 export(run_data_tests)
